# EDA-Project

./: .gitignore  CMakeLists.txt  README.md
src/: benchmark.cpp  trees_test.cpp
src/trees/: bst.hpp  rbtreecount.hpp
tests/: test_generate_traces.py
tools/: analyze.py  analyze_real_world.py  convert_nasa_logs.py  generate_paper_traces.py  generate_superiority_traces.py  generate_traces.py  generate_zipfian_traces.py  plot_paper_comparisons.py  run_benchmarks.py
